--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
     <head>
         <title>Conservify Logs Viewer</title>
 
-        <link rel="stylesheet" href="/bootstrap.min.css">
-        <link rel="stylesheet" href="/app.css">
+        <link rel="stylesheet" href="/logs-viewer/bootstrap.min.css">
+        <link rel="stylesheet" href="/logs-viewer/app.css">
     </head>
     <body>
         <div id='app'></div>
-        <script src='/public/bundle.js'></script>
+        <script src='/logs-viewer/public/bundle.js'></script>
     </body>
 </html>
