Same title style as the other tools.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Conservify Logs Viewer</title>
+        <title>conservify: logs</title>
 
         <link rel="stylesheet" href="/logs-viewer/bootstrap.min.css">
         <link rel="stylesheet" href="/logs-viewer/app.css">
